add minPayment & rounding fixes

--- a/script/config.json
+++ b/script/config.json
@@ -4,8 +4,9 @@
         "chainId":1,
         "startBlockNo":10100645,
         "endBlockNo":13100645,
-        "rpc":"https://mainnet.infura.io/v3/XXXXX",
-        "chunkSize": 100000
+        "rpc":"https://mainnet.infura.io/v3/XXX",
+        "chunkSize": 100000,
+        "minPayment": 10
     },
     {
         "subgraphURL":"https://subgraph.bsc.oceanprotocol.com/subgraphs/name/oceanprotocol/ocean-subgraph",
@@ -13,15 +14,17 @@
         "startBlockNo":10004272,
         "endBlockNo":10364272,
         "rpc":"https://bsc-dataseed.binance.org/",
-        "chunkSize": 100000
+        "chunkSize": 100000,
+        "minPayment": 2
     },
     {
         "subgraphURL":"https://subgraph.polygon.oceanprotocol.com/subgraphs/name/oceanprotocol/ocean-subgraph",
         "chainId":137,
         "startBlockNo":13413668,
         "endBlockNo":18413668,
-        "rpc":"https://polygon-mainnet.infura.io/v3/XXXX",
-        "chunkSize": 100000
+        "rpc":"https://polygon-mainnet.infura.io/v3/XXX",
+        "chunkSize": 100000,
+        "minPayment": 2
     }
 ]
 
